@@ -1,14 +1,21 @@
 {
-  "timestamp" : "2022-07-22T16:36:15Z",
+  "timestamp" : "2022-07-23T16:30:23Z",
   "count_outdated" : 39,
   "uniques_outdated" : 10,
-  "count" : 41,
-  "uniques" : 11,
+  "count" : 42,
+  "uniques" : 12,
   "views" : [
     {
       "timestamp": "2022-07-22T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
